hn_tests/failing/rwa1.hn
LoadColumnFromCsvFile columnIdx fileName = {
	skipToSeparator sep line = {
		ff line _ = _if (eq sep (head line)) (Break (tail line)) (Continue void)
		foldTailUntil ff void line
	}
	skipToColumnByIdx columnIdx line = {
		ff _ line = skipToSeparator (at 0 ",") line
		fold ff line (range 0 columnIdx)
	}
	sizeAndCount columnIdx = {
		getSizeUntilSeparator sep line = {
			ff hd acc = _if (eq sep hd) (Break acc) (Continue (sum acc 1))
			foldUntil ff 0 line
		}
		getSize line = getSizeUntilSeparator (at 0 ",") (skipToColumnByIdx columnIdx line)
		ff curLineSize s = Pair (sum (fst s) 1) (sum (sum (snd s) curLineSize) 1)
		fold2 ff (Pair 0 0) (map getSize (ForEachLine fileName))
	}
	getColumnByIdx idx line = {
		ff hd acc = _if (eq (at 0 ",") hd) (Break acc) (Continue (cons hd acc))
		foldUntil ff nil (skipToColumnByIdx idx line)
	}
	ff col bufAndArr = {
		bufAndBufCol = addToBuf (fst bufAndArr) col
		Pair (fst bufAndBufCol) (addToArr (snd bufAndArr) (snd bufAndBufCol))
	}
	getColumn line = getColumnByIdx columnIdx line
	sc = sizeAndCount columnIdx
	CKeywordFilterOld (fold2 ff (Pair (allocateBuf (fst sc)) (allocateArr (snd sc))) (map getColumn (ForEachLine fileName)))
}